# fst-claude-proxy

./: .gitignore  .npmignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
python/: .npmignore  Dockerfile  litellm_config.yaml  pyproject.toml  requirements.txt  routing_config.yaml
python/claude_proxy/: __init__.py  __main__.py  cli.py  generate_hashes.py  server.py  utils.py
python/claude_proxy/config/: __init__.py  loader.py
python/claude_proxy/hooks/: __init__.py  agent_routing_hook.py  callbacks.py
python/claude_proxy/registry/: __init__.py  agent_hashes.py
python/fst_claude_proxy/: __init__.py  __main__.py  cli.py  generate_hashes.py  server.py  utils.py
python/fst_claude_proxy/config/: __init__.py  loader.py
python/fst_claude_proxy/hooks/: __init__.py  agent_routing_hook.py  callbacks.py  oauth_hook.py
python/fst_claude_proxy/registry/: __init__.py  agent_hashes.json  agent_hashes.py
src/: cli.ts  config-loader.js  config-loader.ts  docker.js  docker.ts  index.js  index.ts  runner.js  runner.ts  types.js  types.ts
